@@ -150,7 +150,12 @@ K = matkermod(A,6)
 A = [3,1,2;1,2,1;3,1,1];
 U = matinvmod(A,6)
 (U*A)%6
+A = [4,2,3; 4,5,6; 7,8,9]; matdetmod(A,27)
 \\end examples
+matdetmod([0,1;1,0],9)
+matdetmod([7,1;1,0],9)
+matdetmod([6,0;0,1],9)
+
 
 \\bad inputs
 matimagemod([],1);
@@ -162,4 +167,6 @@ matkermod([0,'x;1,0],1);
 matinvmod([],1);
 matinvmod([;],'x);
 matinvmod([0,'x;1,0],1);
-
+matdetmod([],1);
+matdetmod(Mat([1,2]),1);
+matdetmod(Mat(1/2),3);
